--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/squirrel.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Squirrel Or Weight</title>
-    <link rel="stylesheet" href="src/index.css" />
+    <title>ციყვი</title>
+    <link rel="stylesheet" href="src/assets/squirrel.jpg" />
   </head>
   <body>
     <div id="root"></div>
